# azure-uhttp-c

./: .gitignore  CMakeLists.txt  dependencies.cmake
configs/: uhttpConfig.cmake
inc/azure_uhttp_c/: uhttp.h
jenkins/: debian_c.sh  linux_c_option_test.sh  osx_c.sh  windows_c.cmd  windows_c_build_as_dynamic.cmd
samples/: CMakeLists.txt
samples/uhttp_sample/: CMakeLists.txt  uhttp_sample.c
src/: uhttp.c
tests/: CMakeLists.txt
tests/uhttp_ut/: CMakeLists.txt  main.c  uhttp_ut.c
